--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,14 @@
         // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
         // // The Firebase SDK is initialized and available here!
         //
-        // firebase.auth().onAuthStateChanged(user => { });
+         firebase.auth().onAuthStateChanged(user => {
+          if (user) {
+            // User is signed in.
+            console.log('User signed in:', user);
+          } else {
+            // No user is signed in.
+            console.log('No user is signed in:');
+          }});
         // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
         // firebase.firestore().doc('/foo/bar').get().then(() => { });
         // firebase.functions().httpsCallable('yourFunction')().then(() => { });
