--- a/public/index.html
+++ b/public/index.html
@@ -118,9 +118,9 @@
         <h5>Percentage Difference = &nbsp;{{((single_price-ltp)/single_price)*100}}&#37;</h5>
         <h5>Total Share = &nbsp;{{expected_total_share}}</h5>
         <h5>Total Price Difference = &nbsp;&#8377;{{expected_total_share}}</h5>
-        <h5>Total Price = &nbsp;&#8377;{{expected_total_price}}</h5>
-        <h5>Total New Average price &nbsp;&#8377;={{expected_new_avg_price}}</h5>
-        <h3>Total Share to be bought &nbsp;={{total_share_to_be_bought}}</h3>
+        <h5>Total Price =&nbsp;&#8377;{{expected_total_price}}</h5>
+        <h5>Total New Average price =&nbsp;&#8377;{{expected_new_avg_price}}</h5>
+        <h3>Total Share to be bought =&nbsp;{{total_share_to_be_bought}}</h3>
         <label ng-model="expected_total_share" />
         <label ng-model="expected_total_price" />
         <label ng-model="total_share_to_be_bought" />
